# Graph-RAG

./: .env.example  .gitignore  Graph-RAG考核实现方案.md  config.py  ppt-figures.html  pyproject.toml  答辩PPT.html  答辩PPT材料.md
api/: __init__.py  server.py
data_ingest/: azure_trace_loader.py  doc_skeleton_seeder.py  episode_builder.py  fault_event_extractor.py  gaia_loader.py  graphiti_writer.py  local_embedder.py  models.py  smd_loader.py  synthetic_data.py
dataset/: DOWNLOAD.md  download_azure_v2.sh
docs/: evaluation_debug_log.md  evaluation_report_v2.md  literature_review.md
eval/: checkpoint.py  graph_construction_metrics.py  metrics.py  question_type_scorer.py  reasoning_metrics.py  testset.jsonl  testset_builder.py  testset_multitype.jsonl  testset_small.jsonl
graph_schema/: constraints.py  edges.py  nodes.py
reasoning/: __init__.py  claim_decomposer.py  controller.py  cypher_generator.py  hallucination_verifier.py  llm_interpreter.py  path_extractor.py  query_types.py  result_models.py  temporal_pruner.py
report/: generate_charts.py  考核报告.md
scripts/: bootstrap_graph.py  build_multitype_testset.py  check_smd_progress.py  diag_one_episode.py  diagnose_graphiti.py  end_to_end_demo.py  export_case_study.py  inspect_embedder_client.py  run_eval.py  run_eval_150.sh  run_eval_bg.sh  run_full_eval.sh  run_full_eval_v2.sh  run_smd_eval.py  run_smd_eval_watchdog.py  seed_synthetic_graph.py  test_neo4j_connection.py
tests/: test_checkpoint.py  test_claim_decomposer.py  test_data_ingest.py  test_frontend_integration.py  test_gaia_loader.py  test_llm_retry.py  (+7 more)
(+47 files in other folders)
